.getFirst() -> .get(0)